--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.17",
+    "@mui/styled-engine-sc": "^5.10.16",
     "@reduxjs/toolkit": "^1.9.1",
     "@supabase/supabase-js": "^2.1.3",
     "@testing-library/jest-dom": "^5.16.5",
