--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Pedro Souza Santana",
-    "job": "Software Engineer",
+    "job": "Front End Developer",
     "banner":"https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",
     "github": "PedroSzSantana"
 }
